@@ -14,6 +14,7 @@ version 3.0.0 (??/??/????):
 	  (#14648)
 	* Fixed password change dialog and problems with connecting to accounts
 	  with non-ASCII passwords. (Tomasz Wasilczyk) (#14652)
+	* Option to show links from strangers. (Tomasz Wasilczyk) (#10591)
 
 	MXit:
 	* Remove all reference to Hidden Number.
